fix calendar week view year overflow

--- a/src/scss/bookingCalendar.module.scss
+++ b/src/scss/bookingCalendar.module.scss
@@ -1,5 +1,10 @@
 @import 'vars';
 
+.controls {
+  display: flex;
+  justify-content: space-between;
+}
+
 .booking {
   fill: $dsek-blue;
   transition: fill 0.2s ease;
